--- a/RoyaleServer/RoyaleServer.csproj
+++ b/RoyaleServer/RoyaleServer.csproj
@@ -43,6 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debug.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\ItemType.cs" />
+    <Compile Include="Network\SocketListener.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerPosition.cs" />
     <Compile Include="Program.cs" />
